add working mobile version, viewport needs to be fixed

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -3,30 +3,57 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Mobile Experience</title>
-  <link href="https://fonts.googleapis.com/css?family=AbrilFatface:500,700|Roboto:400,600,300" rel="stylesheet" type="text/css">
+  <title>Zita Nagyaghy Portfolio</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100|Roboto:400,600,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="container">
-    <header class="header">
-    </header>
-    <section class="picture">
-      <div class="name">
-        <h1>Zita Nagyaghy</h1>
-        <p>Front-End Ninja</em>.</p>
+    <section class="header">
+      <div class="logo">
+        <a><img src="img/udacity.svg"></a>
       </div>
-      <div class="background">
+      <div class="name">
+        <h1>Zita Nagyághy</h1>
+        <h3>Front-End Ninja</h3>
+      </div>
+    </section>
+    <section class="aboutme">
+      <div class="introduction">
+        <p> Hi my name is Zita! I am a junior backend developer who is learning Front-End for fun! </p>
+      </div>
+      <div class="picture">
+        <a><img src="img/code.jpg"></a>
       </div>
     </section>
     <section class="portfolio">
-      <section class="project">
-        <a href="https://placeholder.com"><img src="http://via.placeholder.com/300x300"></a>
+      <div class="featured-projects">
+        <h2>Featured Projects</h2>
       </section>
-      <section class="project">
+      <section class="project p1">
+        <div class="image">
+        </div>
+        <div class="link">
+          <p>Pixel Art Maker<p>
+          <a href="https://codepen.io/zitana/pen/RxBaaZ">https://codepen.io/zitana/pen/RxBaaZ</a>
+        </div>
       </section>
-      <section class="project">
+      <section class="project p2">
+        <div class="image">
+        </div>
+        <div class="link">
+          <p>Curriculum Vitae<p>
+          <a href="https://zitana.github.io/">https://zitana.github.io/</a>
+        </div>
+      </section>
+      <section class="project p3">
+        <div class="image">
+        </div>
+        <div class="link">
+          <p>Udacity Nanodegree Projects<p>
+            <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
+        </div>
       </section>
     </section>
   </div>
