fix css for desktop

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -19,18 +19,12 @@
         <h3>Front-End Ninja</h3>
       </div>
     </section>
-    <section class="aboutme">
-      <div class="introduction">
-        <p> Hi my name is Zita! I am a junior backend developer who is learning Front-End for fun! </p>
-      </div>
-      <div class="picture">
-        <a><img src="img/code.jpg"></a>
-      </div>
-    </section>
+    <img class="cover" src="img/code.jpg">
     <section class="portfolio">
       <div class="featured-projects">
         <h2>Featured Projects</h2>
-      </section>
+      </div>
+      <div class="projects">
       <section class="project p1">
         <div class="image">
         </div>
@@ -55,6 +49,7 @@
             <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
         </div>
       </section>
+    </div>
     </section>
   </div>
 </body>
