add media query for mobile and tablet

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -26,24 +26,21 @@
       </div>
       <div class="projects">
       <section class="project p1">
-        <div class="image">
-        </div>
+        <img class="image" src="img/pixel.png">
         <div class="link">
           <p>Pixel Art Maker<p>
           <a href="https://codepen.io/zitana/pen/RxBaaZ">https://codepen.io/zitana/pen/RxBaaZ</a>
         </div>
       </section>
       <section class="project p2">
-        <div class="image">
-        </div>
+        <img class="image" src="img/cv.png">
         <div class="link">
           <p>Curriculum Vitae<p>
           <a href="https://zitana.github.io/">https://zitana.github.io/</a>
         </div>
       </section>
       <section class="project p3">
-        <div class="image">
-        </div>
+        <img class="image" src="img/portfolio.png">
         <div class="link">
           <p>Udacity Nanodegree Projects<p>
             <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
