--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="This is a portfolio page of my front end projetcs">
   <title>Zita Nagyaghy Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100|Roboto:400,600,300" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100%7CRoboto:400,600,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
