change section tag to more specific header tag

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <section class="header">
+    <header class="header">
       <div class="logo">
         <a><img src="img/udacity.svg"></a>
       </div>
@@ -19,7 +19,7 @@
         <h1>Zita Nagyághy</h1>
         <h3>Front-End Ninja</h3>
       </div>
-    </section>
+    </header>
     <img class="cover" src="img/code.jpg">
     <section class="portfolio">
       <div class="featured-projects">
