change tags in portfolio section

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -22,31 +22,31 @@
     </header>
     <img class="cover" src="img/code.jpg">
     <section class="portfolio">
-      <div class="featured-projects">
+      <header class="featured-projects">
         <h2>Featured Projects</h2>
-      </div>
+      </header>
       <div class="projects">
-        <section class="project p1">
+        <article class="project p1">
           <img class="image" src="img/pixel.png">
           <div class="link">
             <p>Pixel Art Maker<p>
               <a href="https://codepen.io/zitana/pen/RxBaaZ">https://codepen.io/zitana/pen/RxBaaZ</a>
             </div>
-          </section>
-          <section class="project p2">
+          </article>
+          <article class="project p2">
             <img class="image" src="img/cv.png">
             <div class="link">
               <p>Curriculum Vitae<p>
                 <a href="https://zitana.github.io/">https://zitana.github.io/</a>
               </div>
-            </section>
-            <section class="project p3">
+            </article>
+            <article class="project p3">
               <img class="image" src="img/portfolio.png">
               <div class="link">
                 <p>Udacity Nanodegree Projects<p>
                   <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
                 </div>
-              </section>
+              </article>
             </div>
           </section>
         </div>
