add target=_blank to lins

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -30,21 +30,21 @@
           <img class="image" src="img/pixel.png" alt"Pixel Art Maker">
           <div class="link">
             <p>Pixel Art Maker<p>
-              <a href="https://codepen.io/zitana/pen/RxBaaZ">https://codepen.io/zitana/pen/RxBaaZ</a>
+              <a href="https://codepen.io/zitana/pen/RxBaaZ" target="_blank">https://codepen.io/zitana/pen/RxBaaZ</a>
             </div>
           </article>
           <article class="project p2">
             <img class="image" src="img/cv.png" alt="Curriculum Vitae">
             <div class="link">
               <p>Curriculum Vitae<p>
-                <a href="https://zitana.github.io/">https://zitana.github.io/</a>
+                <a href="https://zitana.github.io/ target="_blank"">https://zitana.github.io/</a>
               </div>
             </article>
             <article class="project p3">
               <img class="image" src="img/portfolio.png" alt="Udacity Nanodegree Projects">
               <div class="link">
                 <p>Udacity Nanodegree Projects<p>
-                  <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
+                  <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program" target="_blank">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
                 </div>
               </article>
             </div>
