fix image responsiveness

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -13,14 +13,16 @@
   <div class="container">
     <header class="header">
       <div class="logo">
-        <a><img src="img/udacity.svg"></a>
+        <img src="img/udacity.svg" alt="Udacity logo">
       </div>
       <div class="name">
         <h1>Zita Nagyághy</h1>
         <h3>Front-End Ninja</h3>
       </div>
     </header>
-    <img class="cover" src="img/code.jpg">
+    <div class="cover">
+      <img src="img/code.jpg" alt="Code">
+    </div>
     <section class="portfolio">
       <header class="featured-projects">
         <h2>Featured Projects</h2>
