resolve review comments

--- a/Project 1B - Portfolio Site/index.html
+++ b/Project 1B - Portfolio Site/index.html
@@ -1,56 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="This is a portfolio page of my front end projetcs">
-  <title>Zita Nagyaghy Portfolio</title>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100%7CRoboto:400,600,300" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="container">
-    <header class="header">
-      <div class="logo">
-        <img src="img/udacity.svg" alt="Udacity logo">
-      </div>
-      <div class="name">
-        <h1>Zita Nagyághy</h1>
-        <h3>Front-End Ninja</h3>
-      </div>
-    </header>
-    <div class="cover">
-      <img src="img/code.jpg" alt="Code">
-    </div>
-    <section class="portfolio">
-      <header class="featured-projects">
-        <h2>Featured Projects</h2>
-      </header>
-      <div class="projects">
-        <article class="project p1">
-          <img class="image" src="img/pixel.png" alt"Pixel Art Maker">
-          <div class="link">
-            <p>Pixel Art Maker<p>
-              <a href="https://codepen.io/zitana/pen/RxBaaZ" target="_blank">https://codepen.io/zitana/pen/RxBaaZ</a>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta name="description" content="This is a portfolio page of my front end projetcs">
+      <title>Zita Nagyaghy Portfolio</title>
+      <link href="https://fonts.googleapis.com/css?family=Raleway:100%7CRoboto:400,600,300" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/style.css">
+   </head>
+   <body>
+      <div class="container">
+         <header class="header">
+            <div class="logo">
+               <img src="img/udacity.svg" alt="Udacity logo">
             </div>
-          </article>
-          <article class="project p2">
-            <img class="image" src="img/cv.png" alt="Curriculum Vitae">
-            <div class="link">
-              <p>Curriculum Vitae<p>
-                <a href="https://zitana.github.io/ target="_blank"">https://zitana.github.io/</a>
-              </div>
-            </article>
-            <article class="project p3">
-              <img class="image" src="img/portfolio.png" alt="Udacity Nanodegree Projects">
-              <div class="link">
-                <p>Udacity Nanodegree Projects<p>
-                  <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program" target="_blank">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
-                </div>
-              </article>
+            <div class="name">
+               <h1>Zita Nagyághy</h1>
+               <h3>Front-End Ninja</h3>
             </div>
-          </section>
-        </div>
-      </body>
-      </html>
+         </header>
+         <div class="cover">
+            <img src="img/code.jpg" alt="Code">
+         </div>
+         <section class="portfolio">
+            <header class="featured-projects">
+               <h2>Featured Projects</h2>
+            </header>
+            <div class="projects">
+               <article class="project p1">
+                  <img class="image" src="img/pixel.png" alt="Pixel Art Maker">
+                  <div class="link">
+                     <p>Pixel Art Maker</p>
+                        <a href="https://codepen.io/zitana/pen/RxBaaZ" target="_blank">https://codepen.io/zitana/pen/RxBaaZ</a>
+                  </div>
+               </article>
+               <article class="project p2">
+                  <img class="image" src="img/cv.png" alt="Curriculum Vitae">
+                  <div class="link">
+                     <p>Curriculum Vitae</p>
+                        <a href="https://zitana.github.io/" target="_blank">https://zitana.github.io/</a>
+                  </div>
+               </article>
+               <article class="project p3">
+                  <img class="image" src="img/portfolio.png" alt="Udacity Nanodegree Projects">
+                  <div class="link">
+                     <p>Udacity Nanodegree Projects</p>
+                        <a href="https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program" target="_blank">https://github.com/zitana/Udacity---Front-End-Web-Developer-Nanodegree-Program</a>
+                  </div>
+               </article>
+            </div>
+         </section>
+         <footer>
+           <p>Created by: Zita Nagyághy</p>
+           <p>Contact information:
+             <a href="mailto:nagyaghy.zita@gmail.com">nagyaghy.zita@gmail.com</a>
+           </p>
+         </footer>
+      </div>
+   </body>
+</html>
